utilizadaores podem agora apagar a conta no perfil, admin pode apagar a conta de todos

--- a/Interface/views/acordaos.pug
+++ b/Interface/views/acordaos.pug
@@ -14,7 +14,7 @@ html
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
       if canAddAcordao
         a.w3-bar-item.w3-button(href="/registar/admin") Adicionar admin
-        a.w3-bar-item.w3-button(href="/registar/users") Consultar Utilizadores
+        a.w3-bar-item.w3-button(href="/users") Consultar Utilizadores
     .w3-container
       h2 Acordãos
         if canAddAcordao
