--- a/Interface/views/registarAdmin.pug
+++ b/Interface/views/registarAdmin.pug
@@ -15,7 +15,7 @@ block content
 
             if canAddAcordao
               a.w3-bar-item.w3-button.w3-gray(href="/registar/admin") Adicionar admin
-              a.w3-bar-item.w3-button(href="/registar/users") Consultar Utilizadores
+              a.w3-bar-item.w3-button(href="/users") Consultar Utilizadores
           
     div(id = "login-form-div")
         h2 Criar Conta Administrador
