--- a/Interface/views/search.pug
+++ b/Interface/views/search.pug
@@ -13,7 +13,7 @@ block content
       
       if isAdmin
         a.w3-bar-item.w3-button(href="/registar/admin") Adicionar admin
-        a.w3-bar-item.w3-button(href="/registar/users") Consultar Utilizadores
+        a.w3-bar-item.w3-button(href="/users") Consultar Utilizadores
     
 
   .w3-container.w3-padding
