--- a/Interface/views/acordao.pug
+++ b/Interface/views/acordao.pug
@@ -4,8 +4,20 @@ html
     title Acordão
     link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
   body(class="w3-container")
+    .w3-bar.w3-pink
+      a.w3-bar-item.w3-button(class=(activePage === 'home' ? 'w3-gray' : ''), href="/home") Home
+      a.w3-bar-item.w3-button(class=(activePage === 'tribunais' ? 'w3-gray' : ''), href="/tribunais") Tribunais
+      a.w3-bar-item.w3-button(class=(activePage === 'taxonomia' ? 'w3-gray' : ''), href="/taxonomia") Taxonomia
+      a.w3-bar-item.w3-button(class=(activePage === 'favoritos' ? 'w3-gray' : ''), href="/favoritos") Favoritos
+      a.w3-bar-item.w3-button(class=(activePage === 'perfil' ? 'w3-gray' : ''), href="/perfil") Perfil
+      a.w3-bar-item.w3-button(class=(activePage === 'search' ? 'w3-gray' : ''), href="/search") Search
+      a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
+      if isAdmin
+        a.w3-bar-item.w3-button(class=(activePage === 'registar/admin' ? 'w3-gray' : ''), href="/registar/admin") Adicionar admin
+        a.w3-bar-item.w3-button(class=(activePage === 'users' ? 'w3-gray' : ''), href="/users") Consultar Utilizadores
+
     .w3-container.w3-padding
-    a.w3-button.w3-pink.w3-border(href="/home") ⬅ Voltar
+      button.w3-button.w3-pink.w3-border(type="button", onclick="window.history.back()") ⬅ Voltar
 
     h1(class="w3-center") Acordão
     .w3-card-4
