--- a/Interface/views/layout.pug
+++ b/Interface/views/layout.pug
@@ -3,5 +3,7 @@ html
   head
     title='GesAcordãos'
     link(rel='stylesheet', href='/stylesheets/w3.css')
+    link(rel="icon" href="/images/favicon.ico" type="image/x-icon")
+
   body
     block content
