--- a/Interface/views/acordaos.pug
+++ b/Interface/views/acordaos.pug
@@ -1,8 +1,9 @@
-doctype html
-html
-  head
+extends layout
+
+block content
+  
     link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
-  body
+
     .w3-bar.w3-pink
       a.w3-bar-item.w3-button.w3-gray(href="/home") Home
       a.w3-bar-item.w3-button(href="/tribunais") Tribunais
