--- a/Interface/views/acordao.pug
+++ b/Interface/views/acordao.pug
@@ -1,9 +1,9 @@
-doctype html
-html
-  head
-    title Acordão
+extends layout
+
+block content
+  
     link(rel="stylesheet", href="https://www.w3schools.com/w3css/4/w3.css")
-  body
+  
     .w3-bar.w3-pink
       a.w3-bar-item.w3-button(class=(activePage === 'home' ? 'w3-gray' : ''), href="/home") Home
       a.w3-bar-item.w3-button(class=(activePage === 'tribunais' ? 'w3-gray' : ''), href="/tribunais") Tribunais
