--- a/Interface/views/users.pug
+++ b/Interface/views/users.pug
@@ -8,7 +8,7 @@ block content
       a.w3-bar-item.w3-button(href="/taxonomia") Taxonomia
       a.w3-bar-item.w3-button(href="/favoritos") Favoritos
       a.w3-bar-item.w3-button(href="/perfil") Perfil
-      a.w3-bar-item.w3-button(href="/search") Search
+      a.w3-bar-item.w3-button(href="/search") Pesquisa
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
       a.w3-bar-item.w3-button(href="/registar/admin") Adicionar admin
       a.w3-bar-item.w3-button.w3-gray(href="/users") Consultar Utilizadores
