--- a/Interface/views/addAcordao.pug
+++ b/Interface/views/addAcordao.pug
@@ -8,7 +8,7 @@ block content
     a.w3-bar-item.w3-button(class=(activePage === 'taxonomia' ? 'w3-gray' : ''), href="/taxonomia") Taxonomia
     a.w3-bar-item.w3-button(class=(activePage === 'favoritos' ? 'w3-gray' : ''), href="/favoritos") Favoritos
     a.w3-bar-item.w3-button(class=(activePage === 'perfil' ? 'w3-gray' : ''), href="/perfil") Perfil
-    a.w3-bar-item.w3-button(class=(activePage === 'search' ? 'w3-gray' : ''), href="/search") Search
+    a.w3-bar-item.w3-button(class=(activePage === 'search' ? 'w3-gray' : ''), href="/search") Pesquisa
     a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
     a.w3-bar-item.w3-button(class=(activePage === 'registar/admin' ? 'w3-gray' : ''), href="/registar/admin") Adicionar admin
     a.w3-bar-item.w3-button(class=(activePage === 'users' ? 'w3-gray' : ''), href="/users") Consultar Utilizadores
