--- a/Interface/views/profile.pug
+++ b/Interface/views/profile.pug
@@ -11,7 +11,7 @@ block content
       a.w3-bar-item.w3-button(href="/taxonomia") Taxonomia
       a.w3-bar-item.w3-button(href="/favoritos") Favoritos
       a.w3-bar-item.w3-button.w3-gray(href="/perfil") Perfil
-      a.w3-bar-item.w3-button(href="/search") Search
+      a.w3-bar-item.w3-button(href="/search") Pesquisa
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
       if isAdmin
         a.w3-bar-item.w3-button(href="/registar/admin") Adicionar admin
