--- a/Interface/views/search.pug
+++ b/Interface/views/search.pug
@@ -8,7 +8,7 @@ block content
       a.w3-bar-item.w3-button(href="/taxonomia") Taxonomia
       a.w3-bar-item.w3-button(href="/favoritos") Favoritos
       a.w3-bar-item.w3-button(href="/perfil") Perfil
-      a.w3-bar-item.w3-button.w3-gray(href="/search") Search
+      a.w3-bar-item.w3-button.w3-gray(href="/search") Pesquisa
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
 
       if isAdmin
