--- a/Interface/views/acordao.pug
+++ b/Interface/views/acordao.pug
@@ -13,7 +13,7 @@ block content
       a.w3-bar-item.w3-button(class=(activePage === 'search' ? 'w3-gray' : ''), href="/search") Pesquisa
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
       if isAdmin
-        a.w3-bar-item.w3-button(class=(activePage === 'registar/admin' ? 'w3-gray' : ''), href="/registar/admin") Adicionar admin
+        a.w3-bar-item.w3-button(class=(activePage === 'registar/admin' ? 'w3-gray' : ''), href="/registar/admin") Adicionar Admin
         a.w3-bar-item.w3-button(class=(activePage === 'users' ? 'w3-gray' : ''), href="/users") Consultar Utilizadores
 
     .w3-container.w3-padding
