--- a/Interface/views/registar.pug
+++ b/Interface/views/registar.pug
@@ -7,7 +7,7 @@ block content
         h2(class="w3-center") Criar Conta
         form(id="login-form" action="/registar" method="post")
             p
-                .input-text(title="Username")
+                .input-text(title="Nome de Utilizador")
                     i.fa-solid.fa-user.fa-lg
                     input(name="username" type="text" placeholder="Username" autofocus required)
             p
