--- a/Interface/views/users.pug
+++ b/Interface/views/users.pug
@@ -10,7 +10,7 @@ block content
       a.w3-bar-item.w3-button(href="/perfil") Perfil
       a.w3-bar-item.w3-button(href="/search") Pesquisa
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
-      a.w3-bar-item.w3-button(href="/registar/admin") Adicionar admin
+      a.w3-bar-item.w3-button(href="/registar/admin") Adicionar Admin
       a.w3-bar-item.w3-button.w3-gray(href="/users") Consultar Utilizadores
 
   .w3-container.w3-padding
@@ -21,7 +21,7 @@ block content
           tr
             th Nome
             th Email
-            th Username
+            th Nome de Utilizador
             th Nível
             th Data de Criação
             th Último Acesso
