--- a/Interface/views/addAcordao.pug
+++ b/Interface/views/addAcordao.pug
@@ -10,7 +10,7 @@ block content
     a.w3-bar-item.w3-button(class=(activePage === 'perfil' ? 'w3-gray' : ''), href="/perfil") Perfil
     a.w3-bar-item.w3-button(class=(activePage === 'search' ? 'w3-gray' : ''), href="/search") Pesquisa
     a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
-    a.w3-bar-item.w3-button(class=(activePage === 'registar/admin' ? 'w3-gray' : ''), href="/registar/admin") Adicionar admin
+    a.w3-bar-item.w3-button(class=(activePage === 'registar/admin' ? 'w3-gray' : ''), href="/registar/admin") Adicionar Admin
     a.w3-bar-item.w3-button(class=(activePage === 'users' ? 'w3-gray' : ''), href="/users") Consultar Utilizadores
 
   .w3-container.w3-padding
@@ -20,7 +20,7 @@ block content
 
     form(action="/acordaos/adicionar" method="POST" class="w3-container w3-card-4 w3-padding w3-light-grey form-container")
       fieldset.w3-padding
-        legend.w3-text-pink.w3-large Adicionar acordão
+        legend.w3-text-pink.w3-large Adicionar Acordão
 
         // Explicitly add the "Data do Acordão" field
         .w3-row.w3-padding-16
@@ -47,10 +47,10 @@ block content
         #additionalFields
 
       .w3-row.w3-padding-16
-        label.w3-col.s3 Add Field
+        label.w3-col.s3 Adicionar Campo
         .w3-col.s9
           select.w3-select.w3-border.w3-light-grey(id="addFieldDropdown")
-            option(value="" disabled selected) Select a field to add
+            option(value="" disabled selected) Seleciona um Campo para Adicionar
             each campo in camposPrioridadeFalse
               option(value=campo.NomeFixed data-nome=campo.Nome) #{campo.Nome}
 
@@ -60,15 +60,15 @@ block content
     // File upload form
     form(action="/acordaos/adicionar/from-file" method="POST" enctype="multipart/form-data" class="w3-container w3-card-4 w3-padding w3-light-grey form-container" id="fileUploadForm")
       fieldset.w3-padding
-        legend.w3-text-pink.w3-large Adicionar acordão from file
+        legend.w3-text-pink.w3-large Adicionar acordão por Ficheiro
 
         .w3-row.w3-padding-16
-          label.w3-col.s3(for="acordaoFile") Upload File
+          label.w3-col.s3(for="acordaoFile") Upload Ficheiro
           .w3-col.s9
             input.w3-input.w3-border(type="file" name="acordaoFile" id="acordaoFile" required)
 
       .w3-center
-        button.w3-button.w3-pink.w3-margin-top(type="submit") Submit
+        button.w3-button.w3-pink.w3-margin-top(type="submit") Submeter
 
   script.
     // JavaScript to handle adding and removing fields dynamically
