--- a/Interface/views/login.pug
+++ b/Interface/views/login.pug
@@ -34,10 +34,10 @@ block content
         div(class="w3-center w3-margin-top")
             a(href="/login/google" class="w3-button w3-white w3-border w3-round w3-hover w3-margin-bottom social-button" style="background-color: #ffffff; color: #4285F4;")
                 img(src='/images/google-logo.png', alt='Google logo', class='social-logo')
-                |  Continue with Google
+                |  Continuar com Google
             a(href="/login/facebook" class="w3-button w3-white w3-border w3-round w3-hover social-button" style="background-color: #3b5998; color: #ffffff;")
                 img(src='/images/facebook-logo.png', alt='Facebook logo', class='social-logo')
-                |  Continue with Facebook
+                |  Continuar com Facebook
 
     block footer
         footer.w3-container.w3-pink.w3-bottom
