--- a/Interface/views/search.pug
+++ b/Interface/views/search.pug
@@ -12,7 +12,7 @@ block content
       a.w3-bar-item.w3-button.w3-right(href="/logout") Logout
 
       if isAdmin
-        a.w3-bar-item.w3-button(href="/registar/admin") Adicionar admin
+        a.w3-bar-item.w3-button(href="/registar/admin") Adicionar Admin
         a.w3-bar-item.w3-button(href="/users") Consultar Utilizadores
 
   .w3-container.w3-padding
@@ -29,7 +29,10 @@ block content
         .w3-row.w3-padding-16
           label.w3-col.s3(for="Tribunal") Tribunal
           .w3-col.s9
-            input.w3-input.w3-border(type="text" name="Tribunal" id="Tribunal" value=(query && query.Tribunal ? query.Tribunal : ''))
+            select.w3-select.w3-border(name="Tribunal" id="Tribunal")
+              option(value='') Selecione um Tribunal
+              each tribunal in tribunais
+                option(value=tribunal._id selected=(tribunal._id === query.Tribunal))= tribunal.name
 
         .w3-row.w3-padding-16
           label.w3-col.s3(for="Magistrado") Magistrado
@@ -58,7 +61,7 @@ block content
             th Tribunal
             th Descritores
             th Data
-            th Details
+            th Detalhes
             if isAdmin
               th Remover
               th Editar
@@ -71,7 +74,7 @@ block content
               td= result.Descritores.join(', ')
               td= result.DataAcordao
               td
-                a.w3-button.w3-blue(href=`/acordaos/${result._id}`) View
+                a.w3-button.w3-blue(href=`/acordaos/${result._id}`) Ver
               if isAdmin 
                 td
                   a.w3-button.w3-red(href=`/acordaos/remover/${result._id}`) Remover
